apps/wger/deploy-wger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wger
  name: wger
  namespace: wger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      containers:
      - image: docker.io/wger/server:latest
        name: wger
        volumeMounts:
          - name: media
            mountPath: /home/wger/media
          - name: static
            mountPath: /home/wger/static
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-wger-pvc
        - name: static
          persistentVolumeClaim:
            claimName: static-wger-pvc
