apps/wger/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: wger
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
