apps/wger/svc-wger.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-svc
  namespace: wger
spec:
  selector:
    app: wger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
