apps/wger/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-service
  namespace: wger
spec:
  selector:
    app: wger
  ports:
    - protocol: TCP
      port: 1000
      targetPort: 8080
